Add preview version info to toStringAddJavaVersionToo